--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -50,14 +50,14 @@
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/dylan.jpg" alt="Dylan">
+              <img id="studentImage" src="imgs/users/miranda.jpg" alt="Dylan">
               
             </div>
           </div>
           <i id="dropdown" class="fa fa-chevron-down"></i>
         </ul>
 
-        <div id="extend" >
+        <div id="extend">
           <ul>
             <li>
               <i id="cap" class="icon fa fa-graduation-cap fa-5x"></i>
@@ -75,34 +75,34 @@
           </div>
           <div id="students">
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/anthony.jpg" alt="Anthony">
+              <img id="studentImage" src="imgs/users/bridget.jpg" alt="Anthony">
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/harsh.jpg" alt="Harsh">
+              <img id="studentImage" src="imgs/users/rhea.jpg" alt="Harsh">
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/ben.jpg" alt="Ben">
+              <img id="studentImage" src="imgs/users/dylan.jpg" alt="Ben">
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/zach.jpg" alt="Zachary">
+              <img id="studentImage" src="imgs/users/miranda.jpg" alt="Zachary">
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/jon.jpg" alt="John">
+              <img id="studentImage" src="imgs/users/ben.jpg" alt="John">
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/dylan.jpg" alt="Dylan">
+              <img id="studentImage" src="imgs/users/pranjal.jpg" alt="Dylan">
               
             </div>
           </div>
           <i id="dropdown" class="fa fa-chevron-down"></i>
         </ul>
 
-        <div id="extend" >
+        <div id="extend">
           <ul>
             <li>
               <i id="cap" class="icon fa fa-graduation-cap fa-5x"></i>
@@ -120,7 +120,7 @@
           </div>
           <div id="students">
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/anthony.jpg" alt="Anthony">
+              <img id="studentImage" src="imgs/users/kazi.jpg" alt="Anthony">
               
             </div>
             <div id="studentBody">
@@ -128,15 +128,15 @@
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/ben.jpg" alt="Ben">
+              <img id="studentImage" src="imgs/users/vince.jpg" alt="Ben">
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/zach.jpg" alt="Zachary">
+              <img id="studentImage" src="imgs/users/bridget.jpg" alt="Zachary">
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/jon.jpg" alt="John">
+              <img id="studentImage" src="imgs/users/pat.jpg" alt="John">
               
             </div>
             <div id="studentBody">
@@ -147,7 +147,7 @@
           <i id="dropdown" class="fa fa-chevron-down"></i>
         </ul>
 
-        <div id="extend" >
+        <div id="extend">
           <ul>
             <li>
               <i id="cap" class="icon fa fa-graduation-cap fa-5x"></i>
@@ -169,11 +169,11 @@
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/harsh.jpg" alt="Harsh">
+              <img id="studentImage" src="imgs/users/akhil.jpg" alt="Harsh">
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/ben.jpg" alt="Ben">
+              <img id="studentImage" src="imgs/users/miranda.jpg" alt="Ben">
               
             </div>
             <div id="studentBody">
@@ -181,18 +181,18 @@
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/jon.jpg" alt="John">
+              <img id="studentImage" src="imgs/users/rhea.jpg" alt="John">
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/dylan.jpg" alt="Dylan">
+              <img id="studentImage" src="imgs/users/bridget.jpg" alt="Dylan">
               
             </div>
           </div>
           <i id="dropdown" class="fa fa-chevron-down"></i>
         </ul>
 
-        <div id="extend" >
+        <div id="extend">
           <ul>
             <li>
               <i id="cap" class="icon fa fa-graduation-cap fa-5x"></i>
