--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,8 +6,26 @@
     
     <script> 
       $(document).ready(function() {
-        $("#class").click(function() {
-          $("#extend").slideToggle("fast");
+        $("#class1").click(function() {
+          $("#extend1").slideToggle("fast");
+        });
+      });
+
+      $(document).ready(function() {
+        $("#class2").click(function() {
+          $("#extend2").slideToggle("fast");
+        });
+      });
+
+      $(document).ready(function() {
+        $("#class3").click(function() {
+          $("#extend3").slideToggle("fast");
+        });
+      });
+
+      $(document).ready(function() {
+        $("#class4").click(function() {
+          $("#extend4").slideToggle("fast");
         });
       });
     </script>
@@ -23,7 +41,7 @@
   <div class="content"></div>
     <div id="cont">
       <div id="tp">
-        <ul id="class">
+        <ul id="class1">
           <div id="classname">
             <p1>COMPSCI 311</p1>
             <p2>Introduction to Algorithms</p2>
@@ -57,7 +75,7 @@
           <i id="dropdown" class="fa fa-chevron-down"></i>
         </ul>
 
-        <div id="extend">
+        <div id="extend1">
           <ul>
             <li>
               <i id="cap" class="icon fa fa-graduation-cap fa-5x"></i>
@@ -68,7 +86,7 @@
           </ul>
         </div>
 
-        <ul id="class">
+        <ul id="class2">
           <div id="classname">
             <p1>COMPSCI 326</p1>
             <p2>Web Programming</p2>
@@ -102,7 +120,7 @@
           <i id="dropdown" class="fa fa-chevron-down"></i>
         </ul>
 
-        <div id="extend">
+        <div id="extend2">
           <ul>
             <li>
               <i id="cap" class="icon fa fa-graduation-cap fa-5x"></i>
@@ -113,7 +131,7 @@
           </ul>
         </div>
 
-        <ul id="class">
+        <ul id="class3">
           <div id="classname">
             <p1>COMPSCI 230</p1>
             <p2>Computer Systems Principles</p2>
@@ -147,7 +165,7 @@
           <i id="dropdown" class="fa fa-chevron-down"></i>
         </ul>
 
-        <div id="extend">
+        <div id="extend3">
           <ul>
             <li>
               <i id="cap" class="icon fa fa-graduation-cap fa-5x"></i>
@@ -158,7 +176,7 @@
           </ul>
         </div>
 
-        <ul id="class">
+        <ul id="class4">
           <div id="classname">
             <p1>COMPSCI 240</p1>
             <p2>Reasoning Under Uncertainty</p2>
@@ -192,7 +210,7 @@
           <i id="dropdown" class="fa fa-chevron-down"></i>
         </ul>
 
-        <div id="extend">
+        <div id="extend4">
           <ul>
             <li>
               <i id="cap" class="icon fa fa-graduation-cap fa-5x"></i>
