--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -154,7 +154,7 @@
               
             </div>
             <div id="studentBody">
-              <img id="studentImage" src="imgs/users/pat.jpg" alt="John">
+              <img id="studentImage" src="imgs/users/zach.jpg" alt="John">
               
             </div>
             <div id="studentBody">
