--- a/views/adminControls.handlebars
+++ b/views/adminControls.handlebars
@@ -29,19 +29,19 @@
       </div>
       
 
-      <a class="link" href="/admin/users">
+      <a id="boxlinks" href="/admin/users">
         <div class="linkText">
           Flagged Users
         </div>
       </a>
 
-      <a class="link" href="/admin/classes">
+      <a id="boxlinks" href="/admin/classes">
         <div class="linkText">
           Classes
         </div>
       </a>
 
-      <a class="link" href="/admin/controls">
+      <a id="boxlinks" href="/admin/controls">
         <div class="linkText">
           Flagged Messages
         </div>
