--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -31,8 +31,15 @@
         <center> <div id="form">
              <p>{{message}}</p>
              <form method="post" action="/user/register">
+                <select name="year">
+                  <option value="freshman">freshman</option>
+                  <option value="sophomore">sophomore</option>
+                  <option value="junior">junior</option>
+                  <option value="senior">senior</option>
+                </select><br>
                 <input type="text" name="fname" placeholder="first name" required><br> 
-                <input type="text" name="lname" placeholder="last name" required><br> 
+                <input type="text" name="lname" placeholder="last name" required><br>
+                <input type="text" name="major" placeholder="major/concentration" required><br>  
                 <input type="text" name="email" placeholder="email" required><br> 
                 <input type="password" name="pass" placeholder="password" required><br>
                 <input type="date" name="dob" required><br>
