--- a/public/css/adminControls.css
+++ b/public/css/adminControls.css
@@ -2,8 +2,9 @@ h1{
 	text-align: center;
 }
 
-a:link{
+#boxlinks{
 	text-decoration: none;
+	padding: 1%;
 }
 
 .linkText{
@@ -20,12 +21,16 @@ a:link{
 }
 
 th, td {
-  border: 1px solid black;
-	padding: 5%;
+  	border: 1px solid black;
+	padding: 2%;
 	text-align: center;
 }
 
 table {
-  border-collapse: collapse;
+  	border-collapse: collapse;
 	text-align: center;
+}
+
+#userlist{
+	width: 100%;
 }
