--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -42,6 +42,7 @@
                 <input type="text" name="major" placeholder="major/concentration" required><br>  
                 <input type="text" name="email" placeholder="email" required><br> 
                 <input type="password" name="pass" placeholder="password" required><br>
+                <input type="text" name="spireid" placeholder="spire id" required><br>
                 <input type="date" name="dob" required><br>
                 <button class="btn">Sign Up</button>
              </form>
