Reimplemented admin authorization

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -58,7 +58,7 @@
                   <li>Never miss an assignment</li>
                 </ul><br>
                 <b><i>Which would lead to:</i></b>
-                <ul id="anthony">
+                <ul id="list2">
                   <li><b>In-class comfort</b> - meeting new people outside the classroom enhances your confidence and ability to speak up in class</li>
                   <li><b>Less stress</b> - being on top of your work will reduce stress levels and keep your mind at ease</li>
                   <li><b>Getting to know people</b> - joining groups and congregating outside the classroom helps you get to know more people</li>
