--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,12 @@
       });
     </script>
 
+    <script type="text/javascript">
+      window.currentUser = {
+        id: "<%=current_user.id%>"
+      }
+    </script>
+
     <title>Zembo</title>
   </head>
 
