--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,7 +10,8 @@
 
   {{#each data}}
   <body>
-    {{this.uid}}
+    {{this.pcontent}} {{this.pid}} {{this.pdate}} <br>
+    {{this.ccontent}} {{this.cid}} {{this.cdate}} <br>
   </body>
   {{/each}}
 
