trying to get profile button working

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -151,4 +151,18 @@
 	margin-top: 3%;
 }
 
+#profRight{
+	float: right;
+}
+
+#profRight > a{
+	text-decoration: none;
+	float: right;
+}
+
+
+
+
+
+
 
