--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,9 +34,13 @@
   <div id="page">
     <div class="header">
       <a href="#menu"></a>
-        Zembo
+        <span id="daZem">Zembo</span>
+          <span id="profRight">
+            <a href="/user/profile">{{namef}} {{namel}}</a>
+          </span>
     </div>
   </div>
+
   
   <div class="content"></div>
     <div id="cont">
