--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -26,9 +26,9 @@
       </h1>
     </center>
     <div class="Description">
-      {{member.desc}}
+      {{member.description}}
     </div>
-    <center><a href="team"> GO BACK </a></center>
+    <center><a href="/team"> GO BACK </a></center>
   </div>
   
 </html>
