setting up classes handling

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -44,7 +44,7 @@
         {{#each classes}}
         <ul id="class1">
           <div id="classname">
-            <p2>{{this.num}}</p2>
+            <p2><a href="/classes?={{this.class_id}}">{{this.num}}</a></p2>
           </div>
          
           <i id="dropdown" class="fa fa-chevron-down"></i>
