Moved profile styling to profile.css

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,60 +1,19 @@
 <!DOCTYPE html>
 <html>
-
-		
-	<!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-     <script> 
-      $(document).ready(function() {
-        $("#update").click(function() {
-          $("#extend1").slideToggle("fast");
+	<head>
+  	<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <script> 
+        $(document).ready(function() {
+          $("#update").click(function() {
+            $("#extend1").slideToggle("fast");
+          });
         });
-      });
-      </script> -->
+      </script>
+    </script> -->
 
-	<link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link type="text/css" rel="stylesheet" href="../css/profile.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
-  
-
-	<style>
-
-	#profilepicture{
-		margin: 0 auto;
-	}
-
-	#studentImage{
-		height: 250px;
-		width: 250px;
-	}
-	#details{
-		margin: 0 auto;
-	}
-
-	#details ul{
-		list-style: none;
-	}
-
-	#details li{
-		border-bottom: 1px solid #444;
-		width: 15%;
-	}
-
-	#update{
-		color: #444;
-		text-decoration: none;
-	}
-
-	#update{
-		padding: 0.5%;
-		background-color: #444;
-		color: white;
-	}
-
-	#extend1{
-		display: none;
-	}
-
-	</style>
+  </head>
   
   <div id="page">
     <div class="header">
