--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,21 +1,33 @@
+#profilepicture{
+  margin: 0 auto;
+}
+
 #studentImage{
-  display: block;
-  position: absolute;
-  height: 90px;
-  width: 90px;
-  border-radius: 50px;
-  border: 2px #444 solid;
-  margin: 17px 30px;
+  height: 250px;
+  width: 250px;
 }
 
-#students{
-  float: left;
-  width: 70%;
-  height: 130px;
+#details{
+  margin: 0 auto;
 }
 
-#studentBody{
-  float: left;
-  width: 16%;
-  height: 130px;
+#details ul{
+  list-style: none;
+}
+
+#details li{
+  border-bottom: 1px solid #444;
+  width: 15%;
+}
+
+#update{
+  color: #444;
+  text-decoration: none;
+  padding: 0.5%;
+  background-color: #444;
+  color: white;
+}
+
+#extend1{
+  display: none;
 }
