--- a/views/classes.handlebars
+++ b/views/classes.handlebars
@@ -2,7 +2,7 @@
 <html>
 
 
-  <link rel="stylesheet" type="text/css" href="css/index.css" />
+  <link rel="stylesheet" type="text/css" href="../css/index.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
   
