--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -3,8 +3,8 @@
   
   <head>
     <link type="text/css" rel="stylesheet" href="dist/css/jquery.mmenu.all.css" />
-    <link type="text/css" rel="stylesheet" href="css/team.css">
-    <link type="text/css" rel="stylesheet" href="css/member.css">
+    <link type="text/css" rel="stylesheet" href="../css/team.css">
+    <link type="text/css" rel="stylesheet" href="../css/member.css">
   </head>
 
   <div id="page">
