--- a/views/classes.handlebars
+++ b/views/classes.handlebars
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
-
-  <link rel="stylesheet" type="text/css" href="../css/index.css" />
+  <head>
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
+    </head>
   
   <div id="page">
     <div class="header">
