--- a/views/schedule.handlebars
+++ b/views/schedule.handlebars
@@ -2,36 +2,9 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="../css/createpost.css" />
+    <link rel="stylesheet" type="text/css" href="../css/schedule.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <style>
-      #schedule{
-        padding-top: 2%;
-        padding-bottom: 2%;
-        width: 100%;
-        margin: 0 auto;
-        text-align: center;
-      }
-
-      #basic{
-        font-family: Arial;
-        color: #929292;
-      }
-
-      #inputholder{
-        width: 50%;
-        padding: 1%;
-
-      }
-
-      #createbutton{
-        padding: 0.5% 0.5% 0.5% 0.5%;
-        text-decoration: none;
-      }
-
-    </style>
   </head>
-
-
 
   <div id="page">
     <div class="header">
@@ -43,19 +16,20 @@
   <div class="content"></div>
     <div id="cont">
       <div id="tp">
-        <form method="post" id="schedule">
-          <label><b>SCHEDULE AN EVENT</b></label><br>
+        <center><p>{{message}}</p></center>
+        <form method="post" id="schedule" action="/group/createEvent">
+          <label><b>{{title}}</b></label><br>
           <input type="text" id="inputholder" name="title" placeholder="event title: Eg - 'Anyone want to meet up to work on Homework 4?'"><br>
-          <input type="text" id="inputholder" name="agenda" placeholder="agenda: Eg - 'Work on Algorithms Homework 4 and discuss Graph Theory'"><br>
+          <input type="text" id="inputholder" name="description" placeholder="description: Eg - 'Work on Algorithms Homework 4 and discuss Graph Theory'"><br>
           <input type="text" id="inputholder" name="location" placeholder="location: Eg - 'Learning Commons, TBL 25, W.E.B Du Bois Library'"><br>
-          <label id="basic">date:</label>
+          <label id="basic">Date:</label>
           <input type="date" name="date" required><br>
-          <label id="basic">time:</label>
+          <label id="basic">Time:</label>
           <input type="time" name="time" required><br>
-          <label id="basic">post as:</label>
+          <label id="basic">Post as:</label>
           <select name="anonymity">
-                  <option value="anon">anonymous</option>
-                  <option value="name">name</option>
+            <option value="anonymous">Anonymous</option>
+            <option value={{user}}>{{user}}</option>
           </select><br><br>
           <button id="createbutton">Create</button>
 
