added profile button in top right hand corner

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -152,13 +152,22 @@
 }
 
 #profRight{
-	float: right;
+	float: right !important;
 }
 
-#profRight > a{
-	text-decoration: none;
-	float: right;
+#daZem{
+	margin-left: 7.5%;
 }
+
+#daButt{
+	background-color: inherit;
+	color: white;
+	font-weight: bold;
+	font-size: .86em;
+	border: none;
+	cursor: pointer;
+}
+
 
 
 
