--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -3,7 +3,10 @@
   <div id="page">
     <div class="header">
       <a href="#menu"></a>
-        Zembo
+        <span id="daZem">Zembo</span>
+          <span id="profRight">
+            <button id="daButt" onclick="window.location='/user/profile';">{{namef}} {{namel}}</button>
+          </span>
     </div>
   </div>
   
