--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,7 +36,7 @@
       <a href="#menu"></a>
         <span id="daZem">Zembo</span>
           <span id="profRight">
-            <a href="/user/profile">{{namef}} {{namel}}</a>
+            <button id="daButt" onclick="window.location='/user/profile';">{{namef}} {{namel}}</button>
           </span>
     </div>
   </div>
