fixed zembo logo

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,9 +34,7 @@
   <div id="page">
     <div class="header">
       <a href="#menu"></a>
-        <span id="daZem">Zembo</span>
-          <span id="profRight">
-          </span>
+        Zembo
     </div>
   </div>
 
