--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -10,7 +10,7 @@
   <div id="page">
     <div class="header">
       <a href="#menu"></a>
-        <span id="daZem">Zembo</span>
+        Zembo
     </div>
   </div>
     
