--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -18,7 +18,7 @@
   <div id="page">
     <div class="header">
       <a href="#menu"></a>
-        <span id="daZem">Zembo</span>
+        Zembo
     </div>
   </div>
   <div id="cont">
