--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,11 +26,15 @@
   <div>
     <nav id="menu">
       <ul>
+        <!-- USER PICTURE HERE -->
+        <img src="/public/imgs/users/{{id}}.jpg">
+        <br>
+        <div id="prof"><a href="/user/profile">{{namef}} {{namel}}</a></div>
+        <br>
         <li><a href="/index">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/team">Team</a></li>
         <li><a href="/group/schedule">Schedule</a></li>
-        <li><a href="/user/profile">Profile</a></li>
         <li><a href="/admin/controls" action="/admin/auth">Admin</a></li>
         <li><a href="/user/logout">Logout</a></li>
       </ul>
