--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -246,6 +246,6 @@
      <button class="btn">Sign Up</button>
   </form> -->
 
-  <button method="get" action="/user/addClass">Add Class</button>
+  <a href="/user/addClass">Add Class</a>
 
 </html>
