Changed styling of the individual team pages

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -15,6 +15,12 @@
   <center>
     <div id="cont">
       <div id="tp">
+        <div id="head">
+          <ul id="logo">
+            <center><p1><b>{{member.fname}} {{member.lname}}</b></p1></center>
+          </ul>
+        </div>
+
         <div id="panel1">
           <ul id="test">
             <img src="../imgs/logo.png" width="350px" height="210px">
@@ -22,10 +28,7 @@
           </ul>
         </div>
       </div>
-
-      <center>
-        <h1>{{member.fname}} {{member.lname}}</h1>
-      </center>
+      
       <div class="Description">{{member.description}}</div>
       <center><a href="/team">GO BACK</a></center>
     </div>
