--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -63,7 +63,7 @@
        <!-- add class dropdown -->
     <div id="addclassdropdown">
        <center> <div id="form">
-         <form method="post" action="/user/addClass2">
+         <form method="post" action="/user/addClass">
             <select name="class">
               {{#each data}}
                 <option value={{this.class_id}}>{{this.num}}</option>
@@ -85,7 +85,7 @@
         {{#each classes}}
         <ul id="class1">
           <div id="classname">
-            <p2><a href="/class/{{this.inclass}}">{{this.num}}</a></p2>
+            <p2><a href="/class/{{this.class_id}}">{{this.num}}</a></p2>
           </div>
 
           <i id="dropdown" class="fa fa-chevron-down"></i>
