Fixed banning function

--- a/views/userList.handlebars
+++ b/views/userList.handlebars
@@ -44,7 +44,9 @@
   				{{this.flags}}
   			</td>
   			<td>
-  				<button method="post" action="/admin/ban/{{this.email}}">BAN</button>
+          <form method="post" action="/admin/ban/{{this.email}}">
+  				  <button>BAN</button>
+          </form>
   			</td>
   		</tr>
 
