Changed SQL query to get dropdown classes in alphabetical order

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -51,7 +51,7 @@
        <center> <div id="form">
          <form method="post" action="/user/addClass">
             <select name="values">
-              {{#each data}}
+              {{#each classList}}
                 <option value="{{this.class_id}}, {{this.num}}">
                   {{this.num}}
                 </option>
