--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="dist/css/jquery.mmenu.all.css" />
-    <link type="text/css" rel="stylesheet" href="../css/member.css">
+    <link type="text/css" rel="stylesheet" href="../css/team.css">
   </head>
 
   <div id="page">
@@ -29,6 +29,7 @@
         </div>
       </div>
       
+      <div class="positionClass">{{member.role}}</div>
       <div class="Description">{{member.description}}</div>
       <center><a href="/team">GO BACK</a></center>
     </div>
