--- a/views/schedule.handlebars
+++ b/views/schedule.handlebars
@@ -29,7 +29,7 @@
           <label id="basic">Post as:</label>
           <select name="anonymity">
             <option value="anonymous">Anonymous</option>
-            <option value={{user}}>{{user}}</option>
+            <option value={{user}}>{{namef}}</option>
           </select><br><br>
           <button id="createbutton">Create</button>
         </form>
