--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,11 +37,11 @@
         </div>
         <br>
         <li><a href="/index">Home</a></li>
-        <li><a href="/group/schedule">Schedule</a></li>
-        <li><a href="/admin/controls" action="/admin/auth">Admin</a></li>
+        <li><a id="onlyWhenLoggedIn" href="/group/schedule">Schedule</a></li>
+        <li><a id="onlyWhenLoggedIn" href="/admin/controls" action="/admin/auth">Admin</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/team">Team</a></li>
-        <li><a href="/user/logout">Logout</a></li>
+        <li><a id="onlyWhenLoggedIn" href="/user/logout">Logout</a></li>
       </ul>
     </nav>
   </div>
