--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 
+<style>
+  #prof{
+    display: none;
+  }
+
+  #onlyWhenLoggedIn{
+    display: none;
+  }
+</style>
+
   <div id="page">
     <div class="header">
       <a href="#menu"></a>
@@ -8,9 +18,6 @@
     </div>
   </div>
   
-  <div class="content"> 
-    
-  </div>
   
   <div id="cont">
     <div id="tp">
