--- a/public/css/adminControls.css
+++ b/public/css/adminControls.css
@@ -8,22 +8,20 @@ h1{
 }
 
 .linkText {
-	background-color: #2878d8;
-	color: white;
+	width: 100%;
+	color: #444;
 	font-family: ubuntu, helvetica, arial;
-	margin-top: 3%;
-	padding: 3%;
+	padding: 1%;
 	text-align: center;
 	text-decoration: none;
-	margin-left: 20%;
-	margin-right: 20%;
-	font-size: 2em;
+	font-size: 1em;
 }
 
 th, td {
   border: 1px solid black;
-	padding: 2%;
+	padding: 5%;
 	text-align: center;
+
 }
 
 table {
@@ -31,9 +29,6 @@ table {
 	text-align: center;
 }
 
-#userlist{
-	width: 100%;
-}
 
 #drawerImage{
   height: 130px;
