--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -70,7 +70,7 @@
         {{#each classes}}
           <ul id="class1">
             <div id="classname">
-              <p2><a href="/class/{{this.class_id}}">{{this.num}}</a></p2>
+              <p1><a href="/class/{{this.class_id}}">{{this.num}}</a></p1>
             </div>
             <i id="dropdown" class="fa fa-chevron-down"></i>
           </ul>
@@ -78,5 +78,52 @@
         {{/if}}
       </div>
     </div>
+    <div class="content"></div>
+    <div id="cont">
+      <div id="tp">
+        <ul id="class1">
+          <div id="classname">
+            <p1>COMPSCI 311</p1>
+            <p2>Introduction to Algorithms</p2>
+          </div>
+          <div id="students">
+            <div id="studentBody">
+              <img id="studentImage" src="imgs/users/anthony.jpg" alt="Anthony">
+              
+            </div>
+            <div id="studentBody">
+              <img id="studentImage" src="imgs/users/harsh.jpg" alt="Harsh">
+              
+            </div>
+            <div id="studentBody">
+              <img id="studentImage" src="imgs/users/ben.jpg" alt="Ben">
+              
+            </div>
+            <div id="studentBody">
+              <img id="studentImage" src="imgs/users/zach.jpg" alt="Zachary">
+              
+            </div>
+            <div id="studentBody">
+              <img id="studentImage" src="imgs/users/jon.jpg" alt="John">
+              
+            </div>
+            <div id="studentBody">
+              <img id="studentImage" src="imgs/users/miranda.jpg" alt="Dylan">
+              
+            </div>
+          </div>
+          <i id="dropdown" class="fa fa-chevron-down"></i>
+        </ul>
+
+        <div id="extend1">
+          <ul>
+            <li>
+              <i id="cap" class="icon fa fa-graduation-cap fa-5x"></i>
+              <i id="pencil" class="icon fa fa-pencil-square-o fa-5x"></i>
+              <i id="calendar" class="icon fa fa-calendar fa-5x"></i>
+              <i id="event" class="icon fa fa-plus-square-o fa-5x"></i>
+            </li>
+          </ul>
+        </div>
   </div>
 </html>
