Fixed user's fname, lname, and profile pic in the drawer for each view

--- a/views/adminControls.handlebars
+++ b/views/adminControls.handlebars
@@ -27,7 +27,12 @@
           <center><p4><b>"Work alone no more"</b></p4></center>
         </ul>
       </div>
-      
+
+      <a id="boxlinks" href="/admin/online">
+        <div class="linkText">
+          Online Users
+        </div>
+      </a>      
 
       <a id="boxlinks" href="/admin/users">
         <div class="linkText">
