--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
             <div id="drawerProfPic">
               <img id="drawerImage" src="/imgs/users/{{userId}}.jpg">
             </div>
-            <div id="drawerName">{{namef}} {{namel}}</div>
+            <div id="drawerName">{{fname}} {{lname}}</div>
           </a>
         </div>
         <br>
