Removed unnecessary flashing to index

--- a/views/schedule.handlebars
+++ b/views/schedule.handlebars
@@ -33,6 +33,12 @@
           </select><br><br>
           <button id="createbutton">Create</button>
         </form>
+
+        <center>
+          {{#each event}}
+            
+          {{/each}}
+        </center>
       </div>
     </div>
   </div>
