--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -86,8 +86,9 @@
       </center>
     </div>
   </div>
+  <!-- end add class dropdown -->
 
-
+  <!-- BEGIN CONTENT -->
   <div class="content"></div>
     <div id="cont">
       <div id="tp">
@@ -99,6 +100,13 @@
             <div id="classname">
               <p1><a href="/class/{{this.class_id}}">{{this.num}}</a></p1>
             </div>
+
+            <div id="students">
+              <div id="studentBody">
+               {{this.class_id}}
+                <img id="studentImage" src="imgs/users/anthony.jpg" alt="Anthony">
+              </div>
+              </div>
             <i id="dropdown" class="fa fa-chevron-down"></i>
           </ul>
          <!-- END --> 
@@ -106,10 +114,10 @@
           <div id="extend{{@index}}">
           <ul>
             <li>
-              <i id="cap" class="icon fa fa-graduation-cap fa-5x"></i>
-              <i id="pencil" class="icon fa fa-pencil-square-o fa-5x"></i>
-              <i id="calendar" class="icon fa fa-calendar fa-5x"></i>
-              <i id="event" class="icon fa fa-plus-square-o fa-5x"></i>
+              <a href="{{this.class_id}}"><i id="cap" class="icon fa fa-graduation-cap fa-5x"></i></a>
+              <a href=""><i id="pencil" class="icon fa fa-pencil-square-o fa-5x"></i></a>
+              <a href="schedule"><i id="calendar" class="icon fa fa-calendar fa-5x"></i></a>
+              <a href=""><i id="event" class="icon fa fa-plus-square-o fa-5x"></i></a>
             </li>
           </ul>
         </div>
@@ -119,6 +127,7 @@
         {{/if}}
       </div>
     </div>
+    <!-- END CONTENT -->
 
     <!-- IGNORE -->
     <div class="content"></div>
@@ -157,7 +166,7 @@
           </div>
           <i id="dropdown" class="fa fa-chevron-down"></i>
         </ul>
-        <!-- IGNORE -->
-
+        <!-- END IGNORE -->
   </div>
+
 </html>
