--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -103,10 +103,11 @@
 
             <div id="students">
               <div id="studentBody">
-               {{this.class_id}}
-                <img id="studentImage" src="imgs/users/anthony.jpg" alt="Anthony">
+               
+                <img id="studentImage" src="imgs/users/{{this.uid}}.jpg" alt="{{this.uid}}">
               </div>
-              </div>
+            </div>
+
             <i id="dropdown" class="fa fa-chevron-down"></i>
           </ul>
          <!-- END --> 
@@ -116,8 +117,8 @@
             <li>
               <a href="{{this.class_id}}"><i id="cap" class="icon fa fa-graduation-cap fa-5x"></i></a>
               <a href=""><i id="pencil" class="icon fa fa-pencil-square-o fa-5x"></i></a>
-              <a href="schedule"><i id="calendar" class="icon fa fa-calendar fa-5x"></i></a>
-              <a href=""><i id="event" class="icon fa fa-plus-square-o fa-5x"></i></a>
+              <a href="group/schedule"><i id="calendar" class="icon fa fa-calendar fa-5x"></i></a>
+              <a href="classes/delete"><i id="event" class="icon fa fa-trash fa-5x"></i></a>
             </li>
           </ul>
         </div>
