--- a/views/online.handlebars
+++ b/views/online.handlebars
@@ -29,8 +29,13 @@
     </div>
 
     {{#each online}}
-      {{this.uid}}
-      {{this.email}} <br>
+          <a id="onlineLink" href="/user/profile">
+            <div id="onlineUsers">
+              <img id="onlineImage" src="/imgs/users/{{this.uid}}.jpg"><br>
+              <center>{{fname}} {{lname}}</center>
+            </div>
+          </a>
+       <br>
     {{/each}}
 
 
