Fixed dynamic class view showing the class number and each user in the class

--- a/views/class.handlebars
+++ b/views/class.handlebars
@@ -14,10 +14,9 @@
 
   <div id="cont">
       <div id="tp">
-        {{class_id.num}}
+        {{num}} <br>
         {{#each students}}
-           {{this.spireid}}
-           {{this.fname}}
+          {{this}} <br>
         {{/each}}
       </div>
   </div>
