--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -130,7 +130,7 @@
     </div>
     <!-- END CONTENT -->
 
-    <!-- IGNORE -->
+    <!-- IGNORE 
     <div class="content"></div>
     <div id="cont">
       <div id="tp">
